--- a/style.css
+++ b/style.css
@@ -1,78 +1,142 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-	
 	font-family: 'Montserrat', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(233, 233, 233);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: rgb(233, 233, 233);
 }
 
-.wrapper {
-    width: 600px;
-    background-color: #fff;
-    box-shadow: 0 0 40px rgba(190, 190, 190, 0.7);
-    border-radius: 16px;
+.counter-app {
+	position: relative;
 }
 
-.header {
-    border-radius: 16px 16px 0 0 ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    height: 360px;
-    padding: 20px 40px;
-    font-family: 'Dancing Script', cursive;
-    background-image: url('https://cdn.pixabay.com/photo/2015/06/24/01/15/coffee-819362_1280.jpg');
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    z-index: 0;
+.app-body {
+	display: flex;
+	flex-direction: column;
+	width: 800px;
+	height: 800px;
+	border-radius: 15px;
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+	overflow: hidden;
+}
+
+.image-section {
+	position: relative;
+	height: 400px;
+	background-image: url('default.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+.settings-btn {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	padding: 20px 30px;
+	font-size: 32px;
+	background-color: #fff;
+	border: 1px solid black;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.settings-btn:hover {
+	color: #fff;
+	background-color: #333;
+}
+
+.time-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 400px;
+	background-color: #fff;
+	z-index: 100;
+}
+
+h3 {
+	font-size: 24px;
+	text-align: center;
+}
+
+.time-cards {
+	display: flex;
+	justify-content: space-evenly;
+	width: 100%;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 40px 0;
+	width: 18%;
+	text-align: center;
+	border: 1px solid black;
+	border-radius: 8px;
+}
+
+.number {
+	margin-bottom: 20px;
+	font-size: 48px;
+	font-weight: bold;
+}
+
+.card-title {
+	text-align: center;
+}
+
+.settings {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	padding: 50px 30px;
+	width: 400px;
+	background-color: #fff;
+	border: 1px solid black;
+	border-radius: 8px;
+	opacity: 0;
+	transition: transform 0.5s, opacity 0.3s;
+}
+
+.active {
+	transform: translateX(430px);
+	opacity: 1;
 }
 
 h1 {
-    margin: 0 0 40px 0;
-    font-size: 56px;
+	margin-bottom: 30px;
+	text-transform: uppercase;
 }
 
-.search {
-    padding: 10px 20px;
-    width: 75%;
-    border-radius: 16px;
-    outline: none;
-    border: none;
-    box-shadow: 0 0 40px rgba(46, 46, 46, 0.9);
+label {
+	margin-bottom: 10px;
 }
 
-.drink-list {
-    padding: 20px 40px;
+input {
+	margin-bottom: 30px;
+	padding: 10px 20px;
+	width: 100%;
 }
 
-h2 {
-    padding: 30px 0;
+.date {
+	text-align: center;
 }
 
-ul {
-    padding-bottom: 30px;
-    font-size: 18px;
-    list-style: none;
-}
-
-li {
-    padding: 6px 30px;
-    border-bottom: 1px solid #f0f0f0;
-}
-
-li:last-child {
-    padding: 6px 30px;
-    border-bottom: 0;
+.save {
+	padding: 10px;
+	cursor: pointer;
 }
